refactor folders for shared-library project Part 2